more idiomatic REST. refactor codebase and handlers
